# imagesubtractor

./: .gitignore  License  README.md  imagesubtandmeasure.py  main.py  pyproject.toml  requirements.txt  requirements.yaml
src/: contrast.py  imageprocess.py  imagestack.py  mainwindow.py  mainwindowUI.py  parallel_subtractor.py  roi.py  roicollection.py  subtractor.py  utils.py
src/imagesubtractor/: __init__.py  app.py  app_tk.py  apptk.py  contrast.py  icon.py  imageprocess.py  imagestack.py  imagewidget.py  mainwindow.py  mainwindowUI.py  mainwindowtk.py  parallel_subtractor.py  processwindow.py  roi.py  roicollection.py  subtractor.py  utils.py
src/imagesubtractor/process/: __init__.py  contrast.py  imageprocess.py  imageprocessqt.py  imagestack.py  parallel_subtractor.py  queue_item.py  roi.py  roicollection.py  subtractor.py  worker.py
src/imagesubtractor/widgets/: __init__.py  contrastwidget.py  imageviewer.py  qthread_worker.py  sliderviewer.py  sliderwithvalue.py
