[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "imagesubtractor"
authors = [{name = "Taizo Kawano", email = "t3kawano@gmail.com"}]
maintainers = [{name = "Taizo Kawano", email = "t3kawano@gmail.com"}, {name = "Chung-Kuan Chen", email = "b97b01045@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
            "opencv-python",
            "pandas",
            "numpy",
            "dataclasses",
            "pyqt5",
]
[project.urls]
Home = "https://github.com/lycantrope/imagesubtractor"
