[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{name = "Taizo Kawano", email = "t3kawano@gmail.com"}]
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dependencies = [
  "opencv-python-headless",
  "pandas",
  "numpy",
  "dataclasses",
  "PySide2",
]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
maintainers = [{name = "Taizo Kawano", email = "t3kawano@gmail.com"}, {name = "Chung-Kuan Chen", email = "b97b01045@gmail.com"}]
name = "imagesubtractor"
readme = "README.md"
[project.urls]
Home = "https://github.com/lycantrope/imagesubtractor"

[optional-dependencies]
dev = [
  "black",
  "pre-commit",
]

[project.scripts]
imagesubtractor = "imagesubtractor.app:main"
imagesubtractortk = "imagesubtractor.apptk:main"
